fixed spacing issue on card-body css

--- a/src/styles.css
+++ b/src/styles.css
@@ -186,7 +186,6 @@ margin: 20px auto 0;
 .card-body{
 padding: 20px;
 margin: 0px;
-flex-grow: 1;
 }
 
 
